# arag4tsa

./: .gitignore  README.md
arag4tsa/: LICENSE  README.md  pyproject.toml
arag4tsa/arag4tsa/: dockerfile
arag4tsa/arag4tsa/src/: agents.py  b.py  dbconn.py  main.py  model.py
