[tool.poetry]
name = "arag4tsa"
version = "0.1.0"
description = ""
authors = ["IAO <aakinonigbinde+srv550943@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.21.0"
pandas = "^2.2.2"
pymongo = {extras = ["srv"], version = "^4.8.0"}
sentence-transformers = "^3.0.1"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
